Add background image & buttons

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,3 +1,11 @@
+
+body {
+  background: url('../images/star-background.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  position: absolute;
+}
+
 .App {
   text-align: center;
 }
