--- a/src/Nav/Nav.scss
+++ b/src/Nav/Nav.scss
@@ -1,3 +1,11 @@
 
 
-
+nav {
+  box-sizing: border-box;
+  border: white 1px solid;
+  width: 100%;
+  height: 10%;
+  h1 {
+    color: white;
+  }
+}
