--- a/src/Nav/Nav.scss
+++ b/src/Nav/Nav.scss
@@ -4,8 +4,26 @@ nav {
   box-sizing: border-box;
   border: white 1px solid;
   width: 100%;
-  height: 10%;
+  height: 15%;
+  display: flex;
+  flex-wrap: wrap;
   h1 {
     color: white;
+    width: 80%;
+    margin-left: 10%
+  }
+  div {
+    // height: 100%;
+    width: 10%;
+  }
+  section {
+    width: 80%;
+    margin-left: 10%;
+    display: flex;
+    justify-content: space-around;
+    button {
+      height: 30px;
+      width: 100px;
+    }
   }
 }
