--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,9 +1,9 @@
 
-// html {
-//   height: 100%;
-//   overflow: hidden;
-//   box-sizing: border-box;
-// }
+html {
+  height: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+}
 
 body {
   background: url('../images/star-background.jpg');
@@ -11,11 +11,16 @@ body {
   background-attachment: fixed;
   position: absolute;
   width: 100vw;
+  height: 100%;
+}
 
+#root {
+  height: 100%;
 }
 
 .App {
   text-align: center;
+  height: 100%;
 }
 
 // .App-logo {
