--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -52,3 +52,31 @@ body {
 //     transform: rotate(360deg);
 //   }
 // }
+
+nav {
+  box-sizing: border-box;
+  border: white 1px solid;
+  width: 100%;
+  height: 15%;
+  display: flex;
+  flex-wrap: wrap;
+  h1 {
+    color: white;
+    width: 80%;
+    margin-left: 10%
+  }
+  div {
+    // height: 100%;
+    width: 10%;
+  }
+  section {
+    width: 80%;
+    margin-left: 10%;
+    display: flex;
+    justify-content: space-around;
+    button {
+      height: 30px;
+      width: 100px;
+    }
+  }
+}
