--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,3 +1,4 @@
+@import url(http://allfont.net/allfont.css?fonts=star-jedi);
 
 html {
   height: 100%;
@@ -48,4 +49,14 @@ nav {
       width: 100px;
     }
   }
+}
+
+.nav {
+  background: red;
+  font-family: 'Star Jedi', arial;
+}
+
+.home {
+  width: 100%;
+  background: none;
 }
