Adjust navlink size

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -41,8 +41,8 @@ nav {
   flex-wrap: wrap;
   h1 {
     color: white;
-    width: 80%;
-    margin: 20px 0 0 10%;
+    width: 300px;
+    margin: 20px 0 0 33%;
     font-size: 50px;
   }
   div {
@@ -60,8 +60,13 @@ nav {
   }
 }
 
-.nav {
-  height: 40px;
+.link {
+  height: 20px;
+  margin-top: 10px;
+}
+
+h2 {
+  margin: 0;
 }
 
 h1,
