--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -1,8 +1,23 @@
 
 
 article{
+  box-sizing: border-box;
   margin: 10px;
+  height: 220px;
+  width: 200px;
+  border: white solid 1px;
+  padding-left: 10px;
+  div {
+    display: flex;
+    p {
+      width: 80%;
+      text-align: left;
+      // margin-left: 10px;
+    }
+  }
   p {
     color: white;
+    width: 90%;
+    text-align: left;
   }
 }
