--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -35,7 +35,7 @@ body {
 nav {
   box-sizing: border-box;
   padding-top: 20px;
-  border: white 1px solid;
+  // border: white 1px solid;
   width: 100%;
   height: 15%;
   display: flex;
@@ -93,10 +93,7 @@ h2:hover,
 }
 
 .active {
-  
-  h1{
-    color:#ffd700
-  }
+  h1,
   h2 {
     color:#ffd700
   }
