--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -5,7 +5,8 @@ article{
   margin: 10px;
   height: 220px;
   width: 200px;
-  border: white solid 1px;
+  // border: white solid 1px;
+  background: rgba(155, 155, 155, .2);
   padding-left: 10px;
   div {
     display: flex;
