Center no favorites message

--- a/src/Card-Components/CardComponents.scss
+++ b/src/Card-Components/CardComponents.scss
@@ -1,8 +1,10 @@
 
-section {
+.cardComponents {
   display: flex;
   flex-wrap: wrap;
   h2 {
     color: white;
+    margin: auto;
+    margin-top: 50px;
   }
 }
