--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -5,7 +5,6 @@ article{
   margin: 10px;
   height: 220px;
   width: 200px;
-  // border: white solid 1px;
   background: rgba(155, 155, 155, .2);
   padding-left: 10px;
   div {
@@ -13,7 +12,6 @@ article{
     p {
       width: 80%;
       text-align: left;
-      // margin-left: 10px;
     }
   }
   p {
@@ -24,9 +22,11 @@ article{
 }
 
 .favorite-btn {
-  height: 20px;
+  height: 50px;
+  width: 50px;
 }
 
 .unfavorite-btn {
-  height: 20px;
+  height: 40px;
+  width: 40px;
 }
